--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- nav bar section -->
      <nav class="navbar">
         <div class="heading">
-            <img src="/images/logo.png" alt="ghost logo" class="logo">&nbsp;
+            <img src="images/logo.png" alt="ghost logo" class="logo">&nbsp;
             <span class="text">Ghost<span style="color: green;">Site</span></span>
         </div>
         <ul class="navlinks">
