--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
          <h2>Our specalitices</h2>
          <div class="spcl_cotn">
             <div class="specialty">
-                <img src="/images/ghost_2.jpg" alt="ghost">
+                <img src="images/ghost_2.jpg" alt="ghost">
                 <h3>Echoes of the Forgotten</h3>
                 <p>Once you hear them, they never stop. Whispers crawl through the walls, calling your name—beckoning you to listen… forever.</p>
             </div>
 
             <div class="specialty">
-                <img src="/images/ghost_2.jpg" alt="ghost">
+                <img src="images/ghost_2.jpg" alt="ghost">
                 <h3>Shadows That Follow </h3>
                 <p>You’re never alone. Even in the light, something watches from the corners, just beyond sight. Blink, and it gets closer.</p>
             </div>
             <div class="specialty">
-                <img src="/images/ghost_2.jpg" alt="ghost">
+                <img src="images/ghost_2.jpg" alt="ghost">
                 <h3>The Unseen Ritual</h3>
                 <p>ome doors should never be opened. Some names should never be spoken. Yet, if you’re here… it may already be too late.</p>
             </div>
@@ -63,24 +63,24 @@
             <p>We offer more than service. We offer a warning. The land watches, the soil remembers, and your footsteps are already sinking in. Your satisfaction is not what matters here. Your survival is.</p>
         </div>
         <div class="about_image">
-            <img src="/images/ghost_1.jpg" alt="about ghost">
+            <img src="images/ghost_1.jpg" alt="about ghost">
         </div>
        </section>
 
        <!-- testimonial -->
         <section class="testimonials">
             <div class="testimonial">
-                <img src="/images/ghost_3.webp" alt="nun">
+                <img src="images/ghost_3.webp" alt="nun">
                 <p class="quote">❝ I woke up to the sound of knocking. Slow. Hollow. I opened the door, but no one was there. The knocking never stopped. It’s coming from inside the walls now. ❞</p>
                 <p class="name">-The Forgotten</p>
             </div>
             <div class="testimonial">
-                <img src="/images/ghost_3.webp" alt="nun">
+                <img src="images/ghost_3.webp" alt="nun">
                 <p class="quote">❝ I saw my reflection blink when I didn’t. It smiled. I didn’t. Now every mirror in my house is covered, but I still feel it watching. Waiting. Smiling. ❞</p>
                 <p class="name">-The Witness</p>
             </div>
             <div class="testimonial">
-                <img src="/images/ghost_3.webp" alt="nun">
+                <img src="images/ghost_3.webp" alt="nun">
                 <p class="quote">❝ The door was locked when I went to bed. I was sure of it. But in the morning, it was wide open. The footprints leading inside weren’t mine. ❞</p>
                 <p class="name">-The Vanished</p>
             </div>
@@ -90,7 +90,7 @@
          <footer class="footer">
             <div class="footer_contener">
                 <div class="footer_logo">
-                    <img src="/images/logo.png" alt="ghost logo" class="logo" background="white">&nbsp;
+                    <img src="images/logo.png" alt="ghost logo" class="logo" background="white">&nbsp;
             <span class="text">Ghost<span style="color: green;">Site</span></span>
                 </div>
                 <div class="footer_section">
