--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                 <div class="footer_section">
                     <button class="call_btn" onclick=""location.href='contact.html'"">Contact Ghost Community</button>
                     <div class="social_icons">
-                       <a href="https://www.instagram.com" target="_blank"><img src="/images/insta.webp" alt=""></a>
-                       <a href="https://twitter.com/i/flow/single_sign_on" target="_blank"><img src="/images/twitter.webp" alt=""></a>
-                       <a href="https://www.facebook.com" target="_blank"><img src="/images/facebook.webp
+                       <a href="https://www.instagram.com" target="_blank"><img src="images/insta.webp" alt=""></a>
+                       <a href="https://twitter.com/i/flow/single_sign_on" target="_blank"><img src="images/twitter.webp" alt=""></a>
+                       <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.webp
                         " alt=""></a>
                     </div>
                 </div>
