--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Ghost site</title>
-    <link rel="icon" type="image/png" href="/images/logo.jpeg">
+    <link rel="icon" type="image/png" href="images/logo.jpeg">
     <link rel="stylesheet" href="styleh.css">
 </head>
 <body>
